header and navigation -version1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   <title>FemmeCode</title>
 </head>
 <body>
+  <header>
+  <h1>FemmeCode</h1>
+  <h2>Front End Women</h2>
+  </header>
+  <div id="contenedor-flexible">
 
-</body>
+    <div class="item-flex"><a href="#femmes" class="name-link"><strong>Femmes</strong></a></div>
+    <div class="item-flex"><a href="#equipo" class="name-link"><strong>Equipo</strong></a></div>
+    <div class="item-flex"><a href="#contacto" class="name-link"><strong>Contacto</strong></a></div>
+  </div>
+  <h2 id="femmes">Femmes</h2>
+
 
 
 <!--- FOOTER --->
@@ -31,4 +41,5 @@
   </div>
   <p class="copyright">&copy; FemmeCode 2017</p>
 </footer>
+</body>
 </html>
