añadida parte descripción individual

--- a/index.html
+++ b/index.html
@@ -13,11 +13,107 @@
   </header>
   <div id="contenedor-flexible">
 
-    <div class="item-flex"><a href="#femmes" class="name-link"><strong>Femmes</strong></a></div>
+    <div class="item-flex"><a href="#about-nav" class="name-link"><strong>Femmes</strong></a></div>
     <div class="item-flex"><a href="#equipo" class="name-link"><strong>Equipo</strong></a></div>
     <div class="item-flex"><a href="#contacto" class="name-link"><strong>Contacto</strong></a></div>
   </div>
-  <h2 id="femmes">Femmes</h2>
+  <h1 id="about-nav" class="title">FEMMES</h1>
+
+  <div class="container-about">
+    <div class="irene">
+      <img src="images/Irenebw.jpg" class="profile-images" alt="imagen no carga">
+      <h2 class="name">Irene Navarro</h2>
+      <h3>Team Building</h3>
+      <p>“Para avanzar hay que aceptar nuevos retos y no tener miedo a empezar de nuevo”
+Curiosa desde 1987, aventurera y polífacetica.  </p>
+<p>
+
+          <a href="https://www.linkedin.com/in/irene-navarro-b4ba51152/">
+    <img class="icons-about" src="linkedin-png" alt="Logo Linkedin">
+  </a>
+
+  <a href="https://twitter.com/ire_inf">
+    <img class="icons-about" src="twitter_logo.png" alt="Logo Twitter">
+  </a>
+  <a href="">
+    <img class="icons-about" src="github.png" alt="Logo Git Hub">
+  </a>
+
+</p>
+<hr size="2px" width="100%" noshade= "noshade" align="center" margin= />
+  </div>
+  <div class="julia">
+    <img src="images/Juliabw.jpg" class="profile-images" alt="imagen no carga">
+    <h2 class="name">Julija Racinska</h2>
+    <h3>Líder de comunicación y eventos</h3>
+    <p>Abogacía y el desarrollo Front-End son compatibles!”
+
+Licenciada en derecho de origen báltico. Don de gentes, la capacidad de adoptarse a las circunstancias cambiantes y habilidad de manejar las situaciones difíciles e estresantes - son una menor parte de las cualidades que posee
+ </p>
+ <p>
+
+           <a href="https://www.linkedin.com/in/margarita-cascante-makarova-02193b49">
+     <img class="icons-about" src="img/linkedin-logo-mint.png" alt="Logo Linkedin">
+   </a>
+
+   <a href="https://twitter.com/GordonsitoBrown">
+     <img class="icons-about" src="img/twitter-logo-mint.png" alt="Logo Twitter">
+   </a>
+   <a href="https://twitter.com/GordonsitoBrown">
+     <img class="icons-about" src="github.png" alt="Logo Git Hub">
+   </a>
+ </p>
+<hr size="2px" width="100%" noshade= "noshade" align="center" />
+</div>
+      <div class="rita">
+        <img src="images/ritabw.jpeg" class="profile-images" alt="imagen no carga">
+        <h2 class="name">Rita Cascante Makarova</h2>
+        <h3>Líder de planificación y seguimiento en Femme Code</h3>
+        <p>“Estoy convencida que mi experiencia como Product Manager y las
+metodologías ágiles potencian mi perfil como desarrolladora” </p>
+<p>
+
+        <a href="https://www.linkedin.com/in/margarita-cascante-makarova-02193b49">
+  <img class="icons-about" src="linkedin.png" alt="Logo Linkedin">
+</a>
+
+<a href="https://twitter.com/GordonsitoBrown">
+  <img class="icons-about" src="twitter_logo.png" alt="Logo Twitter">
+</a>
+
+<a href= "https://github.com/rcascante">
+  <img class="icons-about" src="github.png" alt="Logo Git Hub">
+</a>
+
+</p>
+<hr size="2px" width="100%" noshade= "noshade" align="center" />
+    </div>
+    <div class="sara">
+      <img src="images/Sara-bw.jpeg" class="profile-images" alt="imagen no carga">
+      <h2 class="name">Sara Peirce</h2>
+      <h3>Líder de aprendizaje</h3>
+      <p>Científica en pasado, Adalaber en el presente, soñando de convertirse en programadora en un futuro cercano
+       </p>
+       <p>
+
+                 <a href=" https://www.linkedin.com/in/sara-peirce-68205199/">
+           <img class="icons-about" src="img/linkedin-logo-mint.png" alt="Logo Linkedin">
+         </a>
+
+         <a href="https://twitter.com/GordonsitoBrown">
+           <img class="icons-about" src="img/twitter-logo-mint.png" alt="Logo Twitter">
+         </a>
+         <a href=" https://github.com/SaraPeir">
+           <img class="icons-about" src="github.png" alt="Logo Git Hub">
+         </a>
+       </p>
+    <hr size="2px" width="100%" noshade= "noshade" align="center" />
+  </div>
+
+
+
+</div>
+
 
 
 
