Retoques de tamaños de letras

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <title>FemmeCode</title>
 </head>
 
@@ -22,29 +24,29 @@
   <!-- NAVIGATION -->
   <div id="contenedor-flexible">
     <div class="item-flex"><a href="#about-nav" class="name-link"><strong>Equipo</strong></a></div>
-    <div class="item-flex"><a href="#equipo" class="name-link"><strong>Femmes</strong></a></div>
+    <div class="item-flex"><a href="#femmes" class="name-link"><strong>Femmes</strong></a></div>
     <div class="item-flex"><a href="#contacto" class="name-link"><strong>Contacto</strong></a></div>
   </div>
 
   <!-- TEAM SHORT DESCRIPTION -->
-  <div class="team_description">
-    <h2>Gracias al proyecto social, hemos tenido la oportunidad de salir de una situación <br>laboral precaria, y reinventarnos en una profesión con futuro y estabilidad,
-      <br>rompiendo además, con la brecha de género que aún prevalece en este sector.</h2>
+  <div  id="about-nav" class="team_description">
+    <h2>"Adalab nos ha permitido reinventarnos <br> y abrir puertas a futuro profesional prometedor"</h2>
   </div>
 
 
   <!-- INDIVIDUAL DESCRIPTIONS -->
-  <h1 id="about-nav" class="title">FEMMES</h1>
+  <h1 id="femmes" class="title">FEMMES</h1>
   <div class="container-about">
     <div class="irene">
       <img src="img/Irenebw.jpg" class="profile-images" alt="imagen no carga">
       <h2 class="name">Irene Navarro</h2>
       <h3>Team Building</h3>
-      <p>“Para avanzar hay que aceptar nuevos retos y no tener miedo a empezar de nuevo”Curiosa desde 1987,
-         aventurera y polífacetica.</p>
+      <p>“Para avanzar hay que aceptar nuevos retos y no tener miedo a empezar de nuevo”.Curiosa desde 1987,aventurera y polífacetica.</p>
       <a href="https://www.linkedin.com/in/irene-navarro-b4ba51152/">
         <img class="icons-about" src="img/linkedin.png" alt="Logo Linkedin">
       </a>
+
+
 
       <a href="https://twitter.com/ire_inf">
         <img class="icons-about" src="img/twitter_logo.png" alt="Logo Twitter">
@@ -107,7 +109,7 @@
 
 
 <!--- FOOTER --->
-<footer>
+<footer id="contacto">
   <div class="general-footer">
     <h2 class="contact-info">Contacta con nosotras</h2>
     <div class="social">
