New social icons in svg and @media queries for header and general description

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
   <!-- INDIVIDUAL DESCRIPTIONS -->
+  <div class="main-container-about">
   <h1 id="femmes" class="title">FEMMES</h1>
   <div class="container-about">
     <div class="irene">
@@ -42,17 +43,18 @@
       <h2 class="name">Irene Navarro</h2>
       <h3>Team Building</h3>
       <p>“Para avanzar hay que aceptar nuevos retos y no tener miedo a empezar de nuevo”.Curiosa desde 1987,aventurera y polífacetica.</p>
+      <p>Adalab es lo que estaba buscando, llegó en el momento indicado, cuando más lo necesitaba..."</p>
       <a href="https://www.linkedin.com/in/irene-navarro-b4ba51152/">
-        <img class="icons-about" src="img/linkedin.png" alt="Logo Linkedin">
+        <img class="icons-about" src="img/linkedin-logo.svg" alt="Logo Linkedin">
       </a>
 
 
 
       <a href="https://twitter.com/ire_inf">
-        <img class="icons-about" src="img/twitter_logo.png" alt="Logo Twitter">
+        <img class="icons-about" src="img/twitter-logo.svg" alt="Logo Twitter">
       </a>
       <a href="">
-        <img class="icons-about" src="img/github.png" alt="Logo Git Hub">
+        <img class="icons-about" src="img/github-logo.svg" alt="Logo Git Hub">
       </a>
     </div>
 
@@ -63,18 +65,19 @@
         <h2 class="name">Rita Cascante Makarova</h2>
         <h3>Líder de planificación y seguimiento en Femme Code</h3>
         <p>“Estoy convencida que mi experiencia como Product Manager y las
-          metodologías ágiles potencian mi perfil como desarrolladora” </p>
+          metodologías ágiles potencian mi perfil como desarrolladora.</p>
+        <p>Adalab apareció en el horizonte mientras surcaba los mares del mediterráneo"</p>
 
         <a href="https://www.linkedin.com/in/margarita-cascante-makarova-02193b49">
-          <img class="icons-about" src="img/linkedin.png" alt="Logo Linkedin">
+          <img class="icons-about" src="img/linkedin-logo.svg" alt="Logo Linkedin">
         </a>
 
         <a href="https://twitter.com/GordonsitoBrown">
-          <img class="icons-about" src="img/twitter_logo.png" alt="Logo Twitter">
+          <img class="icons-about" src="img/twitter-logo.svg" alt="Logo Twitter">
         </a>
 
         <a href= "https://github.com/rcascante">
-          <img class="icons-about" src="img/github.png" alt="Logo Git Hub">
+          <img class="icons-about" src="img/github-logo.svg" alt="Logo Git Hub">
         </a>
       </div>
 
@@ -84,27 +87,25 @@
       <img src="img/Sara-bw.jpeg" class="profile-images" alt="imagen no carga">
       <h2 class="name">Sara Peirce</h2>
       <h3>Líder de aprendizaje</h3>
-      <p>Científica en pasado, Adalaber en el presente, soñando de convertirse en programadora en un futuro cercano
+      <p>"Científica en pasado, Adalaber en el presente, soñando en convertirme en programadora en un futuro cercano
        </p>
-       <p>
+       <p>Conocí Adalab en la etapa de mi vida que deseaba algo nuevo"</p>
 
                  <a href=" https://www.linkedin.com/in/sara-peirce-68205199/">
-           <img class="icons-about" src="img/linkedin.png" alt="Logo Linkedin">
+           <img class="icons-about" src="img/linkedin-logo.svg" alt="Logo Linkedin">
          </a>
 
          <a href="https://twitter.com/GordonsitoBrown">
-           <img class="icons-about" src="img/twitter_logo.png" alt="Logo Twitter">
+           <img class="icons-about" src="img/twitter-logo.svg" alt="Logo Twitter">
          </a>
          <a href=" https://github.com/SaraPeir">
-           <img class="icons-about" src="img/github.png" alt="Logo Git Hub">
+           <img class="icons-about" src="img/github-logo.svg" alt="Logo Git Hub">
          </a>
        </p>
   </div>
 
-
-
 </div>
-
+</div>
 
 
 
