--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
   <h1 id="femmes" class="title">FEMMES</h1>
   <div class="container-about">
     <div class="irene">
-      <img src="img/Irenebw.jpg" class="profile-images" alt="imagen no carga">
+      <img src="img/Irenebw.jpg" class="profile-images" alt="Foto Irene">
       <h2 class="name">Irene Navarro</h2>
       <h3>Team Building</h3>
       <p>“<i>Para avanzar hay que aceptar nuevos retos y no tener miedo a empezar de nuevo</i>”</p>
@@ -63,7 +63,7 @@
       <hr size="2px" width="100%" noshade= "noshade" align="center">
 
       <div class="rita">
-        <img src="img/ritabw.jpeg" class="profile-images" alt="imagen no carga">
+        <img src="img/ritabw.jpeg" class="profile-images" alt="Foto Rita">
         <h2 class="name">Rita Cascante Makarova</h2>
         <h3>Líder de planificación y seguimiento en Femme Code</h3>
         <p>“<i>Estoy convencida que mi experiencia como Product Manager y las
@@ -87,7 +87,7 @@
     <hr size="2px" width="100%" noshade= "noshade" align="center" />
 
     <div class="sara">
-      <img src="img/Sara-bw.jpeg" class="profile-images" alt="imagen no carga">
+      <img src="img/Sara-bw.jpeg" class="profile-images" alt="Foto Sara">
       <h2 class="name">Sara Peirce</h2>
       <h3>Líder de aprendizaje</h3>
       <p>"<i>Científica en pasado, Adalaber en el presente, soñando en convertirme en programadora en un futuro cercano</i>"</p>
